fix: fix tests for postman